--- a/public/sass/layout/_navbar.scss
+++ b/public/sass/layout/_navbar.scss
@@ -30,17 +30,18 @@ body{
     .logo{
         position: relative;
         margin-left: 2rem;
-        // border: 2px solid red;
+        // border: 2px solid red !important;
+        width: 180px;
         padding: 5px;
         margin-top: 5px;
 
 
          img{
-            width: 30px;
-            height: 30px;
+            width: 25px;
+            height: 25px;
             position: absolute;
             left: 0;
-            top: 1px;
+            top: 2px;
         }
          h1, a{
             font-family: 'Roboto', sans-serif;
@@ -157,7 +158,6 @@ body{
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        
         width: 50%;
     
         
